# SunChat

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  run.py
characterengine/: README.md  pyproject.toml
characterengine/src/characterengine/: __init__.py  assemble.py  config.py  cues.py  infer.py  loader.py  mbti_resources.py  message.py  models.py
characterengine/src/characterengine/resources/: __init__.py  psychology_profile.example.yaml
characterengine/src/characterengine/resources/mbti_engine/: __init__.py  foundations.md  personas.yaml
desktop/: .env.example  .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  uno.config.ts  vitest.config.ts
desktop/scripts/: sync-cubism-core.mjs  sync-live2d-assets.mjs
desktop/src/main/: index.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: index.html
doc/: 开发文档.md  第一阶段开发说明.md  需求文档.md
doc/learn/: 第一阶段基础知识.md
src/app/: config.py  main.py
src/app/api/: ws.py
src/app/emtion/: judge.py  sentiment.py  state.py  trace.py
src/app/llm/: client.py
src/app/mbti_engine/: __init__.py  content.py
src/app/memory/: short_term.py
src/app/prompts/: character_traits.json  judge_system.txt  mood_injection.txt  psychology_profile.yaml  system_base.txt
src/app/psychology/: __init__.py  assemble.py  loader.py  mbti_infer.py
src/app/static/: chat.html
src/sunchat/: __init__.py  __main__.py  config.py  main.py  prompt_resources.py  web_resources.py
src/sunchat/api/: __init__.py  ws.py  ws_protocol.py
src/sunchat/application/: __init__.py  ws_session.py
src/sunchat/domain/: __init__.py  errors.py
src/sunchat/emotion/: __init__.py  judge.py  state.py  strategies.py
src/sunchat/emtion/: __init__.py  judge.py  state.py  trace.py
src/sunchat/infrastructure/: __init__.py  mood_trace.py
src/sunchat/llm/: client.py
src/sunchat/mbti_engine/: __init__.py  (+1 more)
src/sunchat_prompts/: __init__.py  system_base.txt
src/sunchat_static/: __init__.py
(+34 files in other folders)
